fixing spacing hopefully

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,3 +8,9 @@ $color_scheme: '{{ site.color_scheme }}';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Merriweather:wght@400;700&display=swap');
 @import "custom";
 
+.project-gallery .gallery-item p {
+  white-space: normal !important;
+  overflow: visible !important;
+  text-overflow: unset !important;
+  height: auto !important;
+}
